fix typo in job title on the portfolio page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <h3>Daniel Rubiano</h3>
-                <span>Softwarze Engineer</span>
+                <span>Software Engineer</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link active" data-page="home">Home</a></li>
